@@ -3,6 +3,9 @@ changes in sbcl-0.9.7 relative to sbcl-0.9.6:
   * bug fix: it is now possible to have more than one subclass of
     STANDARD-GENERIC-FUNCTION without causing stack overflow.
     (reported by Bruno Haible, Pascal Costanza and others)
+  * bug fix: the dependent update protocol now works for generic
+    functions.  (thanks to Gerd Moellmann; reported by Bruno Haible
+    and Pascal Costanza)
   * bug fix: *COMPILE-FILE-PATHNAME* now contains the user's pathname
     merged with *DEFAULT-PATHNAME-DEFAULTS*.
   * optimization: performance improvements to IO on file streams of
